# task-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  Taskfile.yml  audit.sh  build.sh  fmt.sh  install-task.sh  lint.sh  release.sh  rust-toolchain.toml  schema-taskrc.json  schema.json  update.sh
.devcontainer/: Dockerfile  apk-pins.txt
.github/workflows/: ci.yml  release.yml
crates/ocicas/: Cargo.toml
crates/ocicas/src/: cas.rs  chunker.rs  error.rs  index.rs  lib.rs  lock.rs  store.rs
crates/task/: Cargo.toml
crates/task/completion/: task.fish  task.ps1  task.zsh
crates/task/src/: cli.rs  fuzzy.rs  init.rs  main.rs  prompter.rs  run.rs
crates/task/tests/: behavior.rs  cache.rs  dir_status.rs  dotenv_vars.rs  exec_behavior.rs  includes.rs  listing.rs  migrate.rs  misc.rs
crates/task/tests/common/: mod.rs
crates/taskcore/: Cargo.toml
crates/taskcore/src/: call.rs  compiler.rs  concurrency.rs  editors.rs  env.rs  execext.rs  filepathext.rs  goext.rs  hash.rs  lib.rs  logger.rs  migrate.rs  precondition.rs  requires.rs  slicesext.rs  sort.rs  summary.rs  sysinfo.rs  templater.rs  term.rs  variables.rs  version.rs
crates/taskcore/src/ast/: cache.rs  cmd.rs  defer.rs  dep.rs  dialect.rs  error.rs  for_.rs  glob.rs  graph.rs  include.rs  location.rs  matrix.rs  mod.rs  output.rs  platforms.rs  precondition.rs  prompt.rs  requires.rs  task.rs  taskfile.rs  tasks.rs  var.rs  vars.rs
crates/taskcore/src/cache/: archive.rs  error.rs  lock.rs  mod.rs  oci.rs  redis_lock.rs  url.rs
crates/taskcore/src/executor/: cache_export.rs  error.rs  mod.rs  prompt.rs  prompter.rs  run.rs  setup.rs  signals.rs  status.rs  watch.rs
crates/taskcore/src/fingerprint/: checksum.rs  glob.rs  mod.rs  sources_checksum.rs
crates/taskcore/src/output/: group.rs  interleaved.rs  mod.rs  prefixed.rs
crates/taskcore/src/reader/: dotenv.rs  error.rs  fsext.rs  mod.rs  node.rs  read.rs  snippet.rs
crates/taskcore/tests/: executor_run.rs  reader_include.rs
docs/: cache-server.md  getting-started.md  guide.md  installation.md  integrations.md
docs/reference/: cli.md  schema.md  templating.md
testdata/cache/: Taskfile.yml
testdata/cache_checksum_consistency/: Taskfile.yml
testdata/cache_conditional/: Taskfile.yml
testdata/cache_dep_generates/: Taskfile.yml
testdata/cache_dep_generates_nested/: Taskfile.yml
testdata/cache_disabled/: Taskfile.yml
testdata/cache_disabled_with_lock/: Taskfile.yml
testdata/cache_inherit/: Taskfile.yml
testdata/cache_inherit_override/: Taskfile.yml
testdata/cache_skips_deps/: Taskfile.yml
testdata/cmds_vars/: Taskfile.yml
testdata/from_mixed/: Taskfile.yml  config.txt  input.txt
testdata/from_sources_deps/: Taskfile.yml
testdata/generates/: Taskfile.yml
testdata/jinja_defer/: Taskfile.yml
testdata/status/testdata/: TestStatus-run_gen-foo_3.golden
testdata/version/v1/: Taskfile.yml
